src/assets/scss/variables.scss
@import url('https://fonts.googleapis.com/css?family=Tajawal:300,400,500,600,700');
@import url('https://fonts.googleapis.com/css?family=Lato:300,400,500,600,700');

// Green
$green-1:           #13AA69;
$green-2:           #1ABE77;
$green-3:           #29D385;
$green-4:           #35E599;
$green-5:           #4CF6AC;
$green-6:           #B0FFDD;
$green-7:           #C0FFE4;
$green-8:           #DEFFF1;
$green-9:           #F2FFF9;

// Gray
$gray-1:            #23252E;
$gray-2:            #50525C;
$gray-3:            #8A8A8A;
$gray-4:            #DFDFDF;
$gray-5:            #E8E8E8;
$gray-6:            #F5F5F5;
$gray-7:            #F6F9FC;

// Red
$red-1:             #FFA6A6;
$red-2:             #FF6B6B;
$red-3:             #EE5253;

// Blue
$blue-1:            #2E86DE;
$blue-2:            #54A0FF;
$blue-3:            #98C6FF;

// Purple
$purple-1:          #FF9FF3;
$purple-2:          #F368E0;
$purple-3:          #5F27CD;

// Yellow
$yellow-1:          #FFEFCD;
$yellow-2:          #FF6B6B;
$yellow-3:          #EE5253;

// Orange
$orange-1:          #EE5253;
$orange-2:          #EE5253;

// Magenta
$magenta-1:         #F368E0;
$magenta-2:         #FF9FF3;
$magenta-3:         #FFC5F8;


///////////
// Bulma //
///////////

$green:                 $green-4;
$primary:               $green;

// Background
$body-background-color: $gray-7;

// Radius
$radius-small:      05px;
$radius:            10px;
$radius-large:      15px;

// Fonts
$family-primary:    'Lato';
$family-secondary:  'Tajawal';
$title-family:      'Tajawal';

// Navbar
$navbar-item-hover-color:   $primary;
$navbar-dropdown-arrow:     $primary;
$navbar-burger-color:       $primary;
$navbar-dropdown-z:         50;

@import '~bulma/sass/utilities/_all';

